log
Wed 03 May 2023 01:58:33 PM UTC: 
 tests:  0|5
total_score: 0/70
9a7f71c
Wed 03 May 2023 02:52:55 PM UTC: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9582a8e
Wed 03 May 2023 07:08:13 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:28: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
   64 |           if(n->sudo[j][k] == 0 & num == 0)
      |              ~~~~~~~~~~~~~~^~~~
sudoku.c: At top level:
sudoku.c:75:3: error: expected identifier or ‘(’ before ‘return’
   75 |   return list;
      |   ^~~~~~
sudoku.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:3: error: control reaches end of non-void function [-Werror=return-type]
   73 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
6de64ef
Wed 03 May 2023 07:08:36 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c:75:3: error: expected identifier or ‘(’ before ‘return’
   75 |   return list;
      |   ^~~~~~
sudoku.c:76:1: error: expected identifier or ‘(’ before ‘}’ token
   76 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:73:3: error: control reaches end of non-void function [-Werror=return-type]
   73 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
e2f0035
Wed 03 May 2023 07:08:58 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 5/70
2517c95
Wed 03 May 2023 07:09:09 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
962c416
Wed 03 May 2023 07:09:33 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 5/70
ad6ba1d
Wed 03 May 2023 07:10:38 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
723eb4e
Fri 05 May 2023 06:34:14 PM UTC: 
 sudoku.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
3afc547
Fri 05 May 2023 06:45:35 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
c7ac158
Fri 05 May 2023 06:45:43 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
3bb7c1c
Fri 05 May 2023 06:45:54 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
7b20a99
Fri 05 May 2023 06:47:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
db2f3d1
Fri 05 May 2023 06:48:26 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  3|3
total_score: 25/70
a10c867
Fri 05 May 2023 06:48:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
1ca10e4
Fri 05 May 2023 07:29:38 PM UTC: 
 sudoku.c | 32 ++++++++++++++++++++++++++------
 1 file changed, 26 insertions(+), 6 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:9: error: unused variable ‘arregloS’ [-Werror=unused-variable]
   53 |     int arregloS[10];
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fb4458c
Fri 05 May 2023 07:29:56 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 25/70
71dc839
Fri 05 May 2023 07:31:41 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|2
total_score: 45/70
eb5c6e2
Sun 07 May 2023 12:10:32 AM UTC: 
 sudoku.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:88:14: error: ‘arreglosS’ undeclared (first use in this function); did you mean ‘arregloS’?
   88 |           if(arreglosS[n->sudo[iS][jS]] == 1)
      |              ^~~~~~~~~
      |              arregloS
sudoku.c:88:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:53:9: error: unused variable ‘arregloS’ [-Werror=unused-variable]
   53 |     int arregloS[10] = {0};
      |         ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
368646c
Sun 07 May 2023 12:10:52 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
01816cb
Sun 07 May 2023 12:38:30 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 25/70
50dbcf3
Sun 07 May 2023 12:44:59 AM UTC: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  6|2
total_score: 45/70
076ca66
Sun 07 May 2023 12:45:56 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
cb6f19e
Sun 07 May 2023 01:00:56 AM UTC: 
 sudoku.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:176:24: error: expected expression before ‘List’
  176 |       datoLista = next(List);
      |                        ^~~~
Compilation failed
90f64bf
Sun 07 May 2023 01:01:12 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d6f797f
Sun 07 May 2023 01:01:26 AM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
c030189
Sun 07 May 2023 01:01:36 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7eeb397
Sun 07 May 2023 01:02:57 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:159:24: error: comparison between pointer and integer [-Werror]
  159 |   while(is_empty(pila) != NULL)
      |                        ^~
cc1: all warnings being treated as errors
Compilation failed
1277051
Sun 07 May 2023 01:03:11 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
fa741d7
Sun 07 May 2023 01:03:30 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|1
total_score: 55/70
00d15bb
Sun 07 May 2023 01:04:03 AM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|0
total_score: 70/70
82f7ddc
Sun 07 May 2023 01:05:36 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:179:8: error: ‘auxDato’ undeclared (first use in this function)
  179 |   free(auxDato);
      |        ^~~~~~~
sudoku.c:179:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0389011
